// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots All Components/Blockquote With Citation 1`] = `
<blockquote
  className="sc-bdVaJa gmSXkm"
>
  <q
    className="sc-bwzfXH gqIjTA"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
  <cite
    className="sc-htpNat eaMNlw"
  >
    Ian Malcolm
  </cite>
</blockquote>
`;

exports[`Storyshots All Components/Blockquote Without Citation 1`] = `
<blockquote
  className="sc-bdVaJa gmSXkm"
>
  <q
    className="sc-bwzfXH gqIjTA"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
</blockquote>
`;

exports[`Storyshots All Components/Breadcrumbs Normal 1`] = `
<ol
  className="sc-bxivhb dkElCb"
>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje lcJiSL"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje lcJiSL"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    Find a fund to create films, TV or new formats of storytelling
  </li>
</ol>
`;

exports[`Storyshots All Components/Breadcrumbs Wrapping 1`] = `
<ol
  className="sc-bxivhb dkElCb"
>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje lcJiSL"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje lcJiSL"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje lcJiSL"
      href="/#"
      onClick={[Function]}
    >
      Find a fund to create films, TV or new formats of storytelling
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    Development Fund
  </li>
</ol>
`;

exports[`Storyshots All Components/Button Primary 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <a
    className="sc-bZQynM hghCKQ"
    colorScheme={0}
    href="/#"
    onClick={[Function]}
  >
    Click me
  </a>
</div>
`;

exports[`Storyshots All Components/Button Secondary 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <a
    className="sc-gzVnrw giGuYD"
    colorScheme={0}
    href="/#"
    onClick={[Function]}
  >
    Click me
  </a>
</div>
`;

exports[`Storyshots All Components/Divider Normal 1`] = `
<hr
  className="sc-htoDjs czhBuC"
/>
`;

exports[`Storyshots All Components/Footer Normal 1`] = `
<footer
  className="sc-dnqmqq kVNAGq"
>
  <div
    className="sc-iwsKbI iZPEoN"
  >
    <section
      className="sc-gqjmRU jZSsCi"
    >
      <img
        alt="British Film Institute. Film Forever."
        className="sc-gZMcBi kikhDD"
        src="test-file-stub"
      />
      <nav
        className="sc-jTzLTM jwEjTs"
      >
        <h4
          className="sc-fjdhpX lZPxJ"
        >
          Business
        </h4>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Partnerships
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Venue hire
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Viewing theatre hire
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Book a film for your cinema
        </a>
      </nav>
      <nav
        className="sc-jTzLTM jwEjTs"
      >
        <h4
          className="sc-fjdhpX lZPxJ"
        >
          About the BFI
        </h4>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Our story
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Our team
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Careers
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Our partners
        </a>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Press releases and media enquiries
        </a>
      </nav>
      <nav
        className="sc-jTzLTM jwEjTs"
      >
        <h4
          className="sc-fjdhpX lZPxJ"
        >
          Keep in touch
        </h4>
        <a
          aria-current="page"
          className="sc-cSHVUG lbaKwf"
          href="/"
          onClick={[Function]}
        >
          Contact us
        </a>
        <a
          className="sc-kAzzGY dBmtLY"
          href="#"
        >
          <img
            alt=""
            className="sc-chPdSV bSAUnu"
            src="test-file-stub"
          />
          Facebook
        </a>
        <a
          className="sc-kAzzGY dBmtLY"
          href="#"
        >
          <img
            alt=""
            className="sc-chPdSV bSAUnu"
            src="test-file-stub"
          />
          Twitter
        </a>
        <a
          className="sc-kAzzGY dBmtLY"
          href="#"
        >
          <img
            alt=""
            className="sc-chPdSV bSAUnu"
            src="test-file-stub"
          />
          YouTube
        </a>
        <a
          className="sc-kAzzGY dBmtLY"
          href="#"
        >
          <img
            alt=""
            className="sc-chPdSV bSAUnu"
            src="test-file-stub"
          />
          Instagram
        </a>
      </nav>
    </section>
    <section
      className="sc-VigVT hUbEDI"
    >
      <img
        alt="The BFI recieves National Lottery funding"
        src="test-file-stub"
      />
      <p
        className="sc-jzJRlG enxKql"
      >
        ©2020 British Film Institute. All rights reserved. Registered charity 287780
      </p>
    </section>
  </div>
</footer>
`;

exports[`Storyshots All Components/Header Opaque Background 1`] = `
Array [
  <div
    className="sc-kpOJdX gzdIB"
  >
    <div
      className="sc-dxgOiQ jNKqYJ"
    >
      <ul
        className="sc-ckVGcZ bPSmhm"
      >
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-csuQGl iqdjCI"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-Rmtcm jWoRCr"
    >
      <a
        aria-current="page"
        className="sc-bRBYWo krZptX"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hzDkRC ggbliJ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-brqgnP hHtDLE"
      >
        <ul
          className="sc-cMljjf dDVhTj"
        >
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jDwBTQ hqNJYM"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jWBwVP ZQfIc"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-cvbbAY bzjrEM"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kgoBCf lkctXv"
      >
        <img
          alt=""
          className="sc-kGXeez bRTIXE"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots All Components/Header Transparent Background 1`] = `
Array [
  <div
    className="sc-kpOJdX gzdIB"
  >
    <div
      className="sc-dxgOiQ jNKqYJ"
    >
      <ul
        className="sc-ckVGcZ bPSmhm"
      >
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-csuQGl hbsGTQ"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-Rmtcm jWoRCr"
    >
      <a
        aria-current="page"
        className="sc-bRBYWo krZptX"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hzDkRC ggbliJ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-brqgnP hHtDLE"
      >
        <ul
          className="sc-cMljjf dDVhTj"
        >
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jDwBTQ edqzqS"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ eeUude"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ eeUude"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jWBwVP ZQfIc"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-cvbbAY bzjrEM"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kgoBCf hiPjLY"
      >
        <img
          alt=""
          className="sc-kGXeez bRTIXE"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots All Components/Header With Overflowing Content 1`] = `
Array [
  <div
    className="sc-kpOJdX gzdIB"
  >
    <div
      className="sc-dxgOiQ jNKqYJ"
    >
      <ul
        className="sc-ckVGcZ bPSmhm"
      >
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-csuQGl iqdjCI"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-Rmtcm jWoRCr"
    >
      <a
        aria-current="page"
        className="sc-bRBYWo krZptX"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hzDkRC ggbliJ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-brqgnP hHtDLE"
      >
        <ul
          className="sc-cMljjf dDVhTj"
        >
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jDwBTQ hqNJYM"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jWBwVP ZQfIc"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-cvbbAY bzjrEM"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kgoBCf lkctXv"
      >
        <img
          alt=""
          className="sc-kGXeez bRTIXE"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    style={
      Object {
        "background": "linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%)",
        "height": "200vh",
        "width": "100%",
      }
    }
  />,
]
`;

exports[`Storyshots All Components/Headline Hero H 1 1`] = `
<h1
  className="sc-jhAzac ecXjKB"
>
  My example headline
</h1>
`;

exports[`Storyshots All Components/Headline Level 1 1`] = `
<h1
  className="sc-fBuWsC bhOHYS"
>
  My example headline
</h1>
`;

exports[`Storyshots All Components/Headline Level 2 1`] = `
<h2
  className="sc-fMiknA gGLTif"
>
  My example headline
</h2>
`;

exports[`Storyshots All Components/Headline Level 3 1`] = `
<h3
  className="sc-dVhcbM dZllQQ"
>
  My example headline
</h3>
`;

exports[`Storyshots All Components/Hero Full Height 1`] = `
<section
  className="sc-fAjcbJ jEgnaL"
>
  <div
    className="sc-caSCKo brkSAe"
  >
    <h1
      className="sc-jhAzac ecXjKB"
    >
      Watch a new film, rediscover your old favourites, and get inspired.
    </h1>
  </div>
</section>
`;

exports[`Storyshots All Components/Hero Normal 1`] = `
<section
  className="sc-fAjcbJ cutj"
>
  <div
    className="sc-caSCKo brkSAe"
  >
    <h1
      className="sc-jhAzac ecXjKB"
    >
      Watch a new film, rediscover your old favourites, and get inspired.
    </h1>
  </div>
</section>
`;

exports[`Storyshots All Components/Hero With Header 1`] = `
Array [
  <div
    className="sc-kpOJdX gzdIB"
  >
    <div
      className="sc-dxgOiQ jNKqYJ"
    >
      <ul
        className="sc-ckVGcZ bPSmhm"
      >
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-csuQGl hbsGTQ"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-Rmtcm jWoRCr"
    >
      <a
        aria-current="page"
        className="sc-bRBYWo krZptX"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hzDkRC ggbliJ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-brqgnP hHtDLE"
      >
        <ul
          className="sc-cMljjf dDVhTj"
        >
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jDwBTQ edqzqS"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ eeUude"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ eeUude"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jWBwVP ZQfIc"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-cvbbAY bzjrEM"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kgoBCf hiPjLY"
      >
        <img
          alt=""
          className="sc-kGXeez bRTIXE"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <section
    className="sc-fAjcbJ cutj"
  >
    <div
      className="sc-caSCKo brkSAe"
    >
      <h1
        className="sc-jhAzac ecXjKB"
      >
        Watch a new film, rediscover your old favourites, and get inspired.
      </h1>
    </div>
  </section>,
]
`;

exports[`Storyshots All Components/ImageSide Left And Big 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-gisBJw leFCD"
  >
    <img
      alt="Alt text"
      className="sc-kjoXOD kUKoDr"
      src="http://placehold.it/600x400"
    />
    <figcaption
      className="sc-cHGsZl fnMrWW"
    >
      Example image caption
    </figcaption>
  </figure>
  <article
    className="sc-TOsTZ eAFLlh"
  >
    


    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="#"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    


    <ol>
      
    
      <li>
        What do they got in there? King Kong?
      </li>
      
    
      <li>
        You really think you can fly that thing?
      </li>
      
    
      <li>
        Must go faster
      </li>
      

    </ol>
    


    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="#"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    


    <ul>
      
    
      <li>
        What do they got in there? King Kong?
      </li>
      
    
      <li>
        You really think you can fly that thing?
      </li>
      
    
      <li>
        Must go faster
      </li>
      

    </ul>
    


  </article>
</div>
`;

exports[`Storyshots All Components/ImageSide Right And Small 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-gisBJw hLlIIw"
  >
    <img
      alt="Alt text"
      className="sc-kjoXOD kUKoDr"
      src="http://placehold.it/200x200"
    />
    <figcaption
      className="sc-cHGsZl fnMrWW"
    >
      Example image caption
    </figcaption>
  </figure>
  <article
    className="sc-TOsTZ eAFLlh"
  >
    


    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="#"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    


    <ol>
      
    
      <li>
        What do they got in there? King Kong?
      </li>
      
    
      <li>
        You really think you can fly that thing?
      </li>
      
    
      <li>
        Must go faster
      </li>
      

    </ol>
    


    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="#"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    


    <ul>
      
    
      <li>
        What do they got in there? King Kong?
      </li>
      
    
      <li>
        You really think you can fly that thing?
      </li>
      
    
      <li>
        Must go faster
      </li>
      

    </ul>
    


  </article>
</div>
`;

exports[`Storyshots All Components/Images Normal 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-kgAjT kPoXJU"
  >
    <div
      className="sc-ksYbfQ hQEQZf"
    >
      <button
        className="sc-hmzhuo jimOgU"
        onClick={[Function]}
      >
        <img
          alt="Example image"
          className="sc-frDJqD cYHATy"
          src="http://placehold.it/300x200"
        />
      </button>
      <button
        className="sc-hmzhuo jimOgU"
        onClick={[Function]}
      >
        <img
          alt="Example image 2"
          className="sc-frDJqD cYHATy"
          src="http://placehold.it/200x300"
        />
      </button>
      <button
        className="sc-hmzhuo jimOgU"
        onClick={[Function]}
      >
        <img
          alt="Example image 3"
          className="sc-frDJqD cYHATy"
          src="http://placehold.it/600x400"
        />
      </button>
    </div>
    <figcaption
      className="sc-cJSrbW eGFJMO"
    >
      A gallery of three images
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Images Not Clickable 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-kgAjT kPoXJU"
  >
    <div
      className="sc-ksYbfQ hQEQZf"
    >
      <img
        alt="Example image"
        className="sc-frDJqD fHgTWX"
        src="http://placehold.it/300x200"
      />
      <img
        alt="Example image 2"
        className="sc-frDJqD fHgTWX"
        src="http://placehold.it/200x300"
      />
      <img
        alt="Example image 3"
        className="sc-frDJqD fHgTWX"
        src="http://placehold.it/600x400"
      />
    </div>
    <figcaption
      className="sc-cJSrbW eGFJMO"
    >
      A gallery of three images
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Images Only One 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-kgAjT kPoXJU"
  >
    <div
      className="sc-ksYbfQ fKzBWw"
    >
      <button
        className="sc-hmzhuo jimOgU"
        onClick={[Function]}
      >
        <img
          alt="Example image"
          className="sc-frDJqD cYHATy"
          src="http://placehold.it/300x200"
        />
      </button>
    </div>
    <figcaption
      className="sc-cJSrbW eGFJMO"
    >
      A single full-width image
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Lead paragraph Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <article
    className="sc-hqyNC hWGhDh"
  >
    We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
  </article>
</div>
`;

exports[`Storyshots All Components/Page Active Page 1`] = `
Array [
  <div
    className="sc-kpOJdX gzdIB"
  >
    <div
      className="sc-dxgOiQ jNKqYJ"
    >
      <ul
        className="sc-ckVGcZ bPSmhm"
      >
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-csuQGl iqdjCI"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-Rmtcm jWoRCr"
    >
      <a
        aria-current="page"
        className="sc-bRBYWo krZptX"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hzDkRC ggbliJ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-brqgnP hHtDLE"
      >
        <ul
          className="sc-cMljjf dDVhTj"
        >
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jDwBTQ hqNJYM"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jWBwVP ZQfIc"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-cvbbAY bzjrEM"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kgoBCf lkctXv"
      >
        <img
          alt=""
          className="sc-kGXeez bRTIXE"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    className="sc-jbKcbu dyftzr"
  >
    <article
      className="sc-dNLxif cxpypa"
    >
      <ol
        className="sc-bxivhb dkElCb"
      >
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje lcJiSL"
            href="/#"
            onClick={[Function]}
          >
            Industry
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje lcJiSL"
            href="/#"
            onClick={[Function]}
          >
            Get funding
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje lcJiSL"
            href="/#"
            onClick={[Function]}
          >
            Find a fund to create films, TV or new formats of storytelling
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          Development Fund
        </li>
      </ol>
      <h1
        className="sc-fBuWsC bhOHYS"
      >
        Development Fund
      </h1>
      <article
        className="sc-hqyNC hWGhDh"
      >
        We want to support work that takes risks and does something different. This means we fund projects that can’t find other, commercial finance at development stage.
      </article>
      <article
        className="sc-TOsTZ eAFLlh"
      >
         
        <p>
          The BFI Development Fund supports live action or animated fiction projects, including:
        </p>
         
        <ul>
           
          <li>
            feature films and other longform work
          </li>
           
          <li>
            emerging media including, virtual reality
          </li>
           
        </ul>
         
        <p>
          If you want to make a documentary, contact our partner Doc Society which provides this funding.
        </p>
         
      </article>
      <h2
        className="sc-fMiknA gGLTif"
      >
        Who can apply
      </h2>
      <article
        className="sc-TOsTZ eAFLlh"
      >
         
        <p>
          This fund supports projects which have a writer and a producer. Your team can also include a director, if you have one at this stage.
        </p>
         
        <p>
          The producer needs to apply through their company, based in the UK (or another state of the EU or European Economic Area).
        </p>
         
        <p>
          Writers, directors and producers will need to tell us about their creative track record in the application. This can be in other film work or different media, including theatre and TV.
        </p>
         
        <p>
          Other development funding is available through BFI NETWORK for writers
        </p>
         
        <ul>
           
          <li>
            at an early career stage
          </li>
           
          <li>
            without a producer
          </li>
           
        </ul>
         
      </article>
      <hr
        className="sc-htoDjs czhBuC"
      />
      <h2
        className="sc-fMiknA gGLTif"
      >
        What you need to provide
      </h2>
      <article
        className="sc-TOsTZ eAFLlh"
      >
         
        <p>
          You’ll need to submit an example of the writer’s and/or director’s previous work. This can be in any format, including:
        </p>
         
        <ul>
           
          <li>
            scripts
          </li>
           
          <li>
            pitch documents
          </li>
           
          <li>
            treatments
          </li>
           
          <li>
            mood boards
          </li>
           
          <li>
            storyboards
          </li>
           
          <li>
            sizzle reel
          </li>
           
        </ul>
         
      </article>
      <hr
        className="sc-htoDjs czhBuC"
      />
      <h2
        className="sc-fMiknA gGLTif"
      >
        What kind of projects we fund
      </h2>
      <article
        className="sc-TOsTZ eAFLlh"
      >
         
        <p>
          We’re looking for projects which:
        </p>
         
        <ul>
           
          <li>
            have cultural impact and spark debate
          </li>
           
          <li>
            take risks in platform, content or form
          </li>
           
          <li>
            give new perspectives and widen the range of voices and audiences in film
          </li>
           
          <li>
            come from outside London and the South East of England
          </li>
           
          <li>
            enable talent development and progression achieve creative excellence
          </li>
           
        </ul>
         
      </article>
      <hr
        className="sc-htoDjs czhBuC"
      />
      <h2
        className="sc-fMiknA gGLTif"
      >
        Apply for funding
      </h2>
      <article
        className="sc-TOsTZ eAFLlh"
      >
         
        <p>
          You’ll need to make an account if you’ve not applied before.
        </p>
         
      </article>
      <a
        className="sc-bZQynM jsvBdM"
        colorScheme={1}
        href="/#"
        onClick={[Function]}
      >
        Apply for funding
      </a>
      <hr
        className="sc-htoDjs czhBuC"
      />
      <h2
        className="sc-fMiknA gGLTif"
      >
        Contact us
      </h2>
      <article
        className="sc-TOsTZ eAFLlh"
      >
        <p>
          Contact us if you have a question about your application: 
          <a
            href="mailto:developmentcoordinator@bfi.org.uk"
            title="Email us"
          >
            developmentcoordinator@bfi.org.uk
          </a>
          .
        </p>
      </article>
    </article>
    <aside
      className="sc-jqCOkK iFHvra"
    >
      Sidebar here
    </aside>
  </div>,
  <footer
    className="sc-dnqmqq kVNAGq"
  >
    <div
      className="sc-iwsKbI iZPEoN"
    >
      <section
        className="sc-gqjmRU jZSsCi"
      >
        <img
          alt="British Film Institute. Film Forever."
          className="sc-gZMcBi kikhDD"
          src="test-file-stub"
        />
        <nav
          className="sc-jTzLTM jwEjTs"
        >
          <h4
            className="sc-fjdhpX lZPxJ"
          >
            Business
          </h4>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Partnerships
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Venue hire
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Viewing theatre hire
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Book a film for your cinema
          </a>
        </nav>
        <nav
          className="sc-jTzLTM jwEjTs"
        >
          <h4
            className="sc-fjdhpX lZPxJ"
          >
            About the BFI
          </h4>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Our story
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Our team
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Careers
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Our partners
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Press releases and media enquiries
          </a>
        </nav>
        <nav
          className="sc-jTzLTM jwEjTs"
        >
          <h4
            className="sc-fjdhpX lZPxJ"
          >
            Keep in touch
          </h4>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Contact us
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            Facebook
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            Twitter
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            YouTube
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            Instagram
          </a>
        </nav>
      </section>
      <section
        className="sc-VigVT hUbEDI"
      >
        <img
          alt="The BFI recieves National Lottery funding"
          src="test-file-stub"
        />
        <p
          className="sc-jzJRlG enxKql"
        >
          ©2020 British Film Institute. All rights reserved. Registered charity 287780
        </p>
      </section>
    </div>
  </footer>,
]
`;

exports[`Storyshots All Components/Page Normal 1`] = `
Array [
  <div
    className="sc-kpOJdX gzdIB"
  >
    <div
      className="sc-dxgOiQ jNKqYJ"
    >
      <ul
        className="sc-ckVGcZ bPSmhm"
      >
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jKJlTe XBSLx"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-csuQGl iqdjCI"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-Rmtcm jWoRCr"
    >
      <a
        aria-current="page"
        className="sc-bRBYWo krZptX"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hzDkRC ggbliJ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-brqgnP hHtDLE"
      >
        <ul
          className="sc-cMljjf dDVhTj"
        >
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jDwBTQ hqNJYM"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-jAaTju hZQRgl"
          >
            <a
              aria-haspopup="true"
              className="sc-jDwBTQ djVIeW"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jWBwVP ZQfIc"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-cvbbAY bzjrEM"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kgoBCf lkctXv"
      >
        <img
          alt=""
          className="sc-kGXeez bRTIXE"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    className="sc-jbKcbu dyftzr"
  >
    <article
      className="sc-dNLxif cxpypa"
    >
      <ol
        className="sc-bxivhb dkElCb"
      >
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje lcJiSL"
            href="/#"
            onClick={[Function]}
          >
            Industry
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje lcJiSL"
            href="/#"
            onClick={[Function]}
          >
            Get funding
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje lcJiSL"
            href="/#"
            onClick={[Function]}
          >
            Find a fund to create films, TV or new formats of storytelling
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          Development Fund
        </li>
      </ol>
      <h1
        className="sc-fBuWsC bhOHYS"
      >
        Headline goes here
      </h1>
      <article
        className="sc-hqyNC hWGhDh"
      >
        God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. Do you have any idea how long it takes those cups to decompose. Yes, Yes, without the oops! Yes, Yes, without the oops! Drive us out of here!
      </article>
      <article
        className="sc-TOsTZ eAFLlh"
      >
        So you two dig up, dig up dinosaurs? Hey, you know how I'm, like, always trying to save the planet? Here's my chance. Is this my espresso machine? Wh-what is-h-how did you get my espresso machine? Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
      </article>
    </article>
    <aside
      className="sc-jqCOkK iFHvra"
    >
      Sidebar here
    </aside>
  </div>,
  <footer
    className="sc-dnqmqq kVNAGq"
  >
    <div
      className="sc-iwsKbI iZPEoN"
    >
      <section
        className="sc-gqjmRU jZSsCi"
      >
        <img
          alt="British Film Institute. Film Forever."
          className="sc-gZMcBi kikhDD"
          src="test-file-stub"
        />
        <nav
          className="sc-jTzLTM jwEjTs"
        >
          <h4
            className="sc-fjdhpX lZPxJ"
          >
            Business
          </h4>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Partnerships
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Venue hire
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Viewing theatre hire
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Book a film for your cinema
          </a>
        </nav>
        <nav
          className="sc-jTzLTM jwEjTs"
        >
          <h4
            className="sc-fjdhpX lZPxJ"
          >
            About the BFI
          </h4>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Our story
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Our team
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Careers
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Our partners
          </a>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Press releases and media enquiries
          </a>
        </nav>
        <nav
          className="sc-jTzLTM jwEjTs"
        >
          <h4
            className="sc-fjdhpX lZPxJ"
          >
            Keep in touch
          </h4>
          <a
            aria-current="page"
            className="sc-cSHVUG lbaKwf"
            href="/"
            onClick={[Function]}
          >
            Contact us
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            Facebook
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            Twitter
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            YouTube
          </a>
          <a
            className="sc-kAzzGY dBmtLY"
            href="#"
          >
            <img
              alt=""
              className="sc-chPdSV bSAUnu"
              src="test-file-stub"
            />
            Instagram
          </a>
        </nav>
      </section>
      <section
        className="sc-VigVT hUbEDI"
      >
        <img
          alt="The BFI recieves National Lottery funding"
          src="test-file-stub"
        />
        <p
          className="sc-jzJRlG enxKql"
        >
          ©2020 British Film Institute. All rights reserved. Registered charity 287780
        </p>
      </section>
    </div>
  </footer>,
]
`;

exports[`Storyshots All Components/PageLinks Eight Links 1`] = `
<ul
  className="sc-tilXH ilecPD"
>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Industry fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Find a fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Industry fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Find a fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Four Links Industry Theme 1`] = `
<ul
  className="sc-tilXH ilecPD"
>
  <li
    className="sc-uJMKN jlmogX"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Industry fund
    </h4>
    <p
      className="sc-bbmXgH hGynJI"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-gGBfsJ irQNJn"
      colorScheme={1}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#004225"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN jlmogX"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH hGynJI"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ irQNJn"
      colorScheme={1}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#004225"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN jlmogX"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH hGynJI"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ irQNJn"
      colorScheme={1}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#004225"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN jlmogX"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Find a fund
    </h4>
    <p
      className="sc-bbmXgH hGynJI"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-gGBfsJ irQNJn"
      colorScheme={1}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#004225"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Four Links Learn Theme 1`] = `
<ul
  className="sc-tilXH ilecPD"
>
  <li
    className="sc-uJMKN kKHxvt"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Industry fund
    </h4>
    <p
      className="sc-bbmXgH blAIJW"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-gGBfsJ dTpRaV"
      colorScheme={2}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#031d45"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN kKHxvt"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH blAIJW"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ dTpRaV"
      colorScheme={2}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#031d45"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN kKHxvt"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH blAIJW"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ dTpRaV"
      colorScheme={2}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#031d45"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN kKHxvt"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Find a fund
    </h4>
    <p
      className="sc-bbmXgH blAIJW"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-gGBfsJ dTpRaV"
      colorScheme={2}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#031d45"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Four Links Watch Theme 1`] = `
<ul
  className="sc-tilXH ilecPD"
>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Industry fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Find a fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Four Links With Image 1`] = `
<ul
  className="sc-tilXH ilecPD"
>
  <li
    className="sc-uJMKN oNDkl"
  >
    <div
      className="sc-fYxtnH iUjIrp"
    />
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Industry fund
    </h4>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN oNDkl"
  >
    <div
      className="sc-fYxtnH iUjIrp"
    />
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN oNDkl"
  >
    <div
      className="sc-fYxtnH iUjIrp"
    />
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN oNDkl"
  >
    <div
      className="sc-fYxtnH iUjIrp"
    />
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Find a fund
    </h4>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Three Links 1`] = `
<ul
  className="sc-tilXH ilecPD"
>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Industry fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
  <li
    className="sc-uJMKN hZSwNx"
  >
    <h4
      className="sc-eqIVtm bNoguq"
    >
      Get funding fund
    </h4>
    <p
      className="sc-bbmXgH lnxFMO"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-gGBfsJ ccxlIJ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <div
        className="sc-jnlKLf elNbpn"
      >
        <svg
          height="14"
          viewBox="0 0 8 14"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M3.456 10.788l-6.23-5.867a.695.695 0 010-1.025l.726-.684A.804.804 0 01-.96 3.211L4 7.861l4.961-4.65a.804.804 0 011.087.001l.727.684c.3.283.3.742 0 1.025l-6.23 5.867a.804.804 0 01-1.09 0z"
              fill="#895d60"
              transform="matrix(0 1 1 0 -3 3)"
            />
          </g>
        </svg>
      </div>
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/StepByStep Primary 1`] = `
<div
  style={
    Object {
      "maxWidth": "350px",
      "padding": "20px",
    }
  }
>
  <section
    className="sc-hEsumM epeevU"
  >
    <h3
      className="sc-ktHwxA bDcXYe"
    >
      Applying for film funding
    </h3>
    <ol
      className="sc-cIShpX EwDEt"
    >
      <li
        className="sc-kafWEX iSwIJM"
      >
        <button
          aria-expanded="false"
          className="sc-iELTvK jgmtyB"
          onClick={[Function]}
        >
          <strong
            className="sc-feJyhm fZbtDk"
          >
            Is this fund right for you?
          </strong>
          <p
            className="sc-cmTdod jkxbNf"
          >
            Show
          </p>
        </button>
      </li>
      <li
        className="sc-kafWEX iSwIJM"
      >
        <button
          aria-expanded="false"
          className="sc-iELTvK jgmtyB"
          onClick={[Function]}
        >
          <strong
            className="sc-feJyhm fZbtDk"
          >
            Prepare your supporting materials
          </strong>
          <p
            className="sc-cmTdod jkxbNf"
          >
            Show
          </p>
        </button>
      </li>
      <li
        className="sc-kafWEX iSwIJM"
      >
        <button
          aria-expanded="false"
          className="sc-iELTvK jgmtyB"
          onClick={[Function]}
        >
          <strong
            className="sc-feJyhm fZbtDk"
          >
            Apply
          </strong>
          <p
            className="sc-cmTdod jkxbNf"
          >
            Show
          </p>
        </button>
      </li>
      <li
        className="sc-kafWEX iSwIJM"
      >
        <button
          aria-expanded="false"
          className="sc-iELTvK jgmtyB"
          onClick={[Function]}
        >
          <strong
            className="sc-feJyhm fZbtDk"
          >
            Wait to hear from us
          </strong>
          <p
            className="sc-cmTdod jkxbNf"
          >
            Show
          </p>
        </button>
      </li>
      <li
        className="sc-kafWEX iSwIJM"
      >
        <button
          aria-expanded="false"
          className="sc-iELTvK jgmtyB"
          onClick={[Function]}
        >
          <strong
            className="sc-feJyhm fZbtDk"
          >
            Your decision
          </strong>
          <p
            className="sc-cmTdod jkxbNf"
          >
            Show
          </p>
        </button>
      </li>
    </ol>
  </section>
</div>
`;

exports[`Storyshots All Components/Text Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <article
    className="sc-TOsTZ eAFLlh"
  >
    

            
    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="#"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    

            
    <ol>
      
                
      <li>
        What do they got in there? King Kong?
      </li>
      
                
      <li>
        You really think you can fly that thing?
      </li>
      
                
      <li>
        Must go faster
      </li>
      
            
    </ol>
    

            
    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="#"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    

            
    <ul>
      
                
      <li>
        What do they got in there? King Kong?
      </li>
      
                
      <li>
        You really think you can fly that thing?
      </li>
      
                
      <li>
        Must go faster
      </li>
      
            
    </ul>
    
            
            
  </article>
</div>
`;
